--- a/404.md
+++ b/404.md
@@ -6,5 +6,5 @@ locale: de
 # Na so was,<br/>die Seite wurde nicht gefunden.
 
 <div class="col align-start pt-5">
-  <a href="/" class="button">Zurück zur Hompage</a>
+  <a href="/" class="button">Zurück zur Homepage</a>
 </div>
